--- a/Collect Movie Data Limited.ipynb
+++ b/Collect Movie Data Limited.ipynb
@@ -39,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "'<html>\\r\\n<head><title>Index of /enwiki/</title></head>\\r\\n<body bgcolor=\"white\">\\r\\n<h1>Index of /enwiki/</h1><hr><pre><a href=\"../\">../</a>\\r\\n<a href=\"20181101/\">20181101/</a>                                          21-Dec-2018 01:35                   -\\r\\n<a href=\"20181120/\">20181120/</a>                                          02-Jan-2019 01:27                   -\\r\\n<a href=\"20181201/\">20181201/</a>                                          21-Jan-2019 01:34                   -\\r\\n<a href=\"20181220/\">20181220/</a>                                          02-Feb-2019 01:28                   -\\r\\n<a href=\"20190101/\">20190101/</a>                                          09-Jan-2019 03:53                   -\\r\\n<a href=\"20190120/\">20190120/</a>                                          25-Jan-2019 04:47                   -\\r\\n<a href=\"20190201/\">20190201/</a>                                          14-Feb-2019 14:40                   -\\r\\n<a href=\"latest/\">latest/</a>                                            14-Feb-2019 14:40                   -\\r\\n</pre><hr></body>\\r\\n</html>\\r\\n'"
+       "'<html>\\r\\n<head><title>Index of /enwiki/</title></head>\\r\\n<body bgcolor=\"white\">\\r\\n<h1>Index of /enwiki/</h1><hr><pre><a href=\"../\">../</a>\\r\\n<a href=\"20181101/\">20181101/</a>                                          21-Dec-2018 01:35                   -\\r\\n<a href=\"20181120/\">20181120/</a>                                          02-Jan-2019 01:27                   -\\r\\n<a href=\"20181201/\">20181201/</a>                                          21-Jan-2019 01:34                   -\\r\\n<a href=\"20181220/\">20181220/</a>                                          02-Feb-2019 01:28                   -\\r\\n<a href=\"20190101/\">20190101/</a>                                          09-Jan-2019 03:53                   -\\r\\n<a href=\"20190120/\">20190120/</a>                                          25-Jan-2019 04:47                   -\\r\\n<a href=\"20190201/\">20190201/</a>                                          15-Feb-2019 18:35                   -\\r\\n<a href=\"latest/\">latest/</a>                                            15-Feb-2019 18:35                   -\\r\\n</pre><hr></body>\\r\\n</html>\\r\\n'"
       ]
      },
      "execution_count": 2,
@@ -70,8 +70,8 @@
        "<a href=\"20181220/\">20181220/</a>                                          02-Feb-2019 01:28                   -\n",
        "<a href=\"20190101/\">20190101/</a>                                          09-Jan-2019 03:53                   -\n",
        "<a href=\"20190120/\">20190120/</a>                                          25-Jan-2019 04:47                   -\n",
-       "<a href=\"20190201/\">20190201/</a>                                          14-Feb-2019 14:40                   -\n",
-       "<a href=\"latest/\">latest/</a>                                            14-Feb-2019 14:40                   -\n",
+       "<a href=\"20190201/\">20190201/</a>                                          15-Feb-2019 18:35                   -\n",
+       "<a href=\"latest/\">latest/</a>                                            15-Feb-2019 18:35                   -\n",
        "</pre><hr/></body>\n",
        "</html>"
       ]
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,6 +315,37 @@
     "parser = xml.sax.make_parser()\n",
     "handler = WikiXmlHandler()\n",
     "parser.setContentHandler(handler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with bz2.BZ2File(path, \"r\") as raw_data:\n",
+    "    raw_data.seek(0, os.SEEK_END)\n",
+    "    size = raw_data.tell()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70922565540"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "size"
    ]
   },
   {
