--- a/Recommender System.ipynb
+++ b/Recommender System.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,16 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'movie_1:0' shape=(?, 1) dtype=float32>"
+       "<tf.Tensor 'link:0' shape=(?, 1) dtype=float32>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,16 +126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'movie_1:0' shape=(?, 1) dtype=float32>"
+       "<tf.Tensor 'movie:0' shape=(?, 1) dtype=float32>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,16 +166,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'link_embedding_1/embedding_lookup:0' shape=(?, 1, 50) dtype=float32>"
+       "<tf.Tensor 'link_embedding/embedding_lookup:0' shape=(?, 1, 50) dtype=float32>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,16 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'movie_embedding_1/embedding_lookup:0' shape=(?, 1, 50) dtype=float32>"
+       "<tf.Tensor 'movie_embedding/embedding_lookup:0' shape=(?, 1, 50) dtype=float32>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,16 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'dot_product_1/MatMul:0' shape=(?, 1, 1) dtype=float32>"
+       "<tf.Tensor 'dot_product/MatMul:0' shape=(?, 1, 1) dtype=float32>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,16 +255,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'reshape_2/Reshape:0' shape=(?, 1) dtype=float32>"
+       "<tf.Tensor 'reshape_1/Reshape:0' shape=(?, 1) dtype=float32>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,16 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.engine.training.Model at 0x21de99d79e8>"
+       "<keras.engine.training.Model at 0x1752878b908>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
       "dot_product (Dot)               (None, 1, 1)         0           link_embedding[0][0]             \n",
       "                                                                 movie_embedding[0][0]            \n",
       "__________________________________________________________________________________________________\n",
-      "reshape_3 (Reshape)             (None, 1)            0           dot_product[0][0]                \n",
+      "reshape_2 (Reshape)             (None, 1)            0           dot_product[0][0]                \n",
       "==================================================================================================\n",
       "Total params: 3,845,650\n",
       "Trainable params: 3,845,650\n",
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "9"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "       [0., 0., 0.]])"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,25 +424,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "random.seed(5)\n",
     "for idx, (link_id, movie_id) in enumerate(random.sample(pairs, positive_samples)):\n",
     "    batch[idx, :] = (link_id, movie_id, 1)\n",
-    "    idx = positive_samples\n",
-    "    while idx < batch_size:\n",
-    "            movie_id = random.randrange(len(movie_to_idx))\n",
-    "            link_id = random.randrange(len(top_links))\n",
-    "            if not (link_id, movie_id) in pairs_set:\n",
-    "                batch[idx, :] = (link_id, movie_id, -1)\n",
-    "                idx += 1"
+    "idx = positive_samples\n",
+    "while idx < batch_size:\n",
+    "    movie_id = random.randrange(len(movie_to_idx))\n",
+    "    link_id = random.randrange(len(top_links))\n",
+    "    if not (link_id, movie_id) in pairs_set:\n",
+    "        batch[idx, :] = (link_id, movie_id, -1)\n",
+    "        idx += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "[(31254, 5530), (22418, 1529), (1313, 7236)]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -472,15 +472,15 @@
        "array([[ 3.1254e+04,  5.5300e+03,  1.0000e+00],\n",
        "       [ 2.2418e+04,  1.5290e+03,  1.0000e+00],\n",
        "       [ 1.3130e+03,  7.2360e+03,  1.0000e+00],\n",
-       "       [ 1.7333e+04,  2.0750e+03, -1.0000e+00],\n",
-       "       [ 2.8243e+04,  3.4310e+03, -1.0000e+00],\n",
-       "       [ 2.1821e+04,  2.7170e+03, -1.0000e+00],\n",
-       "       [ 4.1110e+04,  4.7390e+03, -1.0000e+00],\n",
-       "       [ 2.6840e+04,  3.2580e+03, -1.0000e+00],\n",
-       "       [ 2.5805e+04,  2.9760e+03, -1.0000e+00]])"
+       "       [ 3.8010e+03,  5.8740e+03, -1.0000e+00],\n",
+       "       [ 3.2643e+04,  7.6280e+03, -1.0000e+00],\n",
+       "       [ 2.0558e+04,  8.4900e+02, -1.0000e+00],\n",
+       "       [ 4.8731e+04,  1.8540e+03, -1.0000e+00],\n",
+       "       [ 3.2318e+04,  7.6850e+03, -1.0000e+00],\n",
+       "       [ 1.3365e+04,  6.2380e+03, -1.0000e+00]])"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,24 +500,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 2.2418e+04,  1.5290e+03,  1.0000e+00],\n",
-       "       [ 2.5805e+04,  2.9760e+03, -1.0000e+00],\n",
-       "       [ 3.1254e+04,  5.5300e+03,  1.0000e+00],\n",
-       "       [ 2.1821e+04,  2.7170e+03, -1.0000e+00],\n",
-       "       [ 1.3130e+03,  7.2360e+03,  1.0000e+00],\n",
-       "       [ 4.1110e+04,  4.7390e+03, -1.0000e+00],\n",
-       "       [ 1.7333e+04,  2.0750e+03, -1.0000e+00],\n",
-       "       [ 2.8243e+04,  3.4310e+03, -1.0000e+00],\n",
-       "       [ 2.6840e+04,  3.2580e+03, -1.0000e+00]])"
+       "array([[ 3.1254e+04,  5.5300e+03,  1.0000e+00],\n",
+       "       [ 3.2643e+04,  7.6280e+03, -1.0000e+00],\n",
+       "       [ 3.2318e+04,  7.6850e+03, -1.0000e+00],\n",
+       "       [ 1.3365e+04,  6.2380e+03, -1.0000e+00],\n",
+       "       [ 4.8731e+04,  1.8540e+03, -1.0000e+00],\n",
+       "       [ 3.8010e+03,  5.8740e+03, -1.0000e+00],\n",
+       "       [ 2.2418e+04,  1.5290e+03,  1.0000e+00],\n",
+       "       [ 2.0558e+04,  8.4900e+02, -1.0000e+00],\n",
+       "       [ 1.3130e+03,  7.2360e+03,  1.0000e+00]])"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
