--- a/Question Matching.ipynb
+++ b/Question Matching.ipynb
@@ -1479,6 +1479,285 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LSTM Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lstm_model(embedding_size, vocab_size):\n",
+    "    title = layers.Input(shape=(None,), dtype='int32', name='title')\n",
+    "    body = layers.Input(shape=(None,), dtype='int32', name='body')\n",
+    "\n",
+    "    embedding = layers.Embedding(\n",
+    "        mask_zero=True,\n",
+    "        input_dim=vocab_size,\n",
+    "        output_dim=embedding_size,\n",
+    "#         weights=[w2v_weights],\n",
+    "#         trainable=False\n",
+    "    )\n",
+    "\n",
+    "    lstm_1 = layers.LSTM(units=512, return_sequences=True)\n",
+    "    lstm_2 = layers.LSTM(units=512, return_sequences=False)\n",
+    "    \n",
+    "    sum_a = lstm_2(lstm_1(embedding(title)))\n",
+    "    sum_b = lstm_2(lstm_1(embedding(body)))\n",
+    "\n",
+    "    sim = layers.dot([sum_a, sum_b], axes=1, normalize=True)\n",
+    "#     sim = layers.Activation(activation='sigmoid')(sim)\n",
+    "    sim_model = models.Model(\n",
+    "        inputs=[title, body],\n",
+    "        outputs=[sim],\n",
+    "    )\n",
+    "    sim_model.compile(loss='binary_crossentropy', optimizer='rmsprop')\n",
+    "\n",
+    "    embedding_model = models.Model(\n",
+    "        inputs=[title],\n",
+    "        outputs=[sum_a]\n",
+    "    )\n",
+    "    return sim_model, embedding_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "title (InputLayer)              (None, None)         0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "body (InputLayer)               (None, None)         0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "embedding_2 (Embedding)         (None, None, 100)    25000000    title[0][0]                      \n",
+      "                                                                 body[0][0]                       \n",
+      "__________________________________________________________________________________________________\n",
+      "lstm_1 (LSTM)                   (None, None, 512)    1255424     embedding_2[0][0]                \n",
+      "                                                                 embedding_2[1][0]                \n",
+      "__________________________________________________________________________________________________\n",
+      "lstm_2 (LSTM)                   (None, 512)          2099200     lstm_1[0][0]                     \n",
+      "                                                                 lstm_1[1][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "dot_4 (Dot)                     (None, 1)            0           lstm_2[0][0]                     \n",
+      "                                                                 lstm_2[1][0]                     \n",
+      "==================================================================================================\n",
+      "Total params: 28,354,624\n",
+      "Trainable params: 28,354,624\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n",
+      "Epoch 1/10\n",
+      "100/100 [==============================] - 135s 1s/step - loss: 0.8139\n",
+      "Epoch 2/10\n",
+      "100/100 [==============================] - 130s 1s/step - loss: 0.7351\n",
+      "Epoch 3/10\n",
+      "100/100 [==============================] - 131s 1s/step - loss: 0.7061\n",
+      "Epoch 4/10\n",
+      "100/100 [==============================] - 131s 1s/step - loss: 0.7019\n",
+      "Epoch 5/10\n",
+      "100/100 [==============================] - 130s 1s/step - loss: 0.7431\n",
+      "Epoch 6/10\n",
+      "100/100 [==============================] - 130s 1s/step - loss: 0.7290\n",
+      "Epoch 7/10\n",
+      "100/100 [==============================] - 130s 1s/step - loss: 0.6972\n",
+      "Epoch 8/10\n",
+      "100/100 [==============================] - 131s 1s/step - loss: 0.6938\n",
+      "Epoch 9/10\n",
+      "100/100 [==============================] - 131s 1s/step - loss: 0.6944\n",
+      "Epoch 10/10\n",
+      "100/100 [==============================] - 131s 1s/step - loss: 0.7080\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x25ff2c92e48>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lstm, lstm_embedding = lstm_model(embedding_size=EMBEDDING_SIZE, vocab_size=VOCAB_SIZE)\n",
+    "lstm.summary()\n",
+    "lstm.fit_generator(\n",
+    "    data_generator(batch_size=128),\n",
+    "    epochs=10,\n",
+    "    steps_per_epoch=100,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34829/34829 [==============================] - 13s 381us/step\n",
+      "Roundtrip ticket versus one way\n",
+      "Shinkansen from Kyoto to Hiroshima\n",
+      "Bus tour of Germany\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dist</th>\n",
+       "      <th>question</th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.999880</td>\n",
+       "      <td>Roundtrip ticket versus one way</td>\n",
+       "      <td>Health Insurance coverage in UK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.999883</td>\n",
+       "      <td>Roundtrip ticket versus one way</td>\n",
+       "      <td>Cancelling apartment booking in Switzerland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.999932</td>\n",
+       "      <td>Roundtrip ticket versus one way</td>\n",
+       "      <td>Transatlantic cruises allowing casual dressing?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.999954</td>\n",
+       "      <td>Roundtrip ticket versus one way</td>\n",
+       "      <td>Bringing work goods across border</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.999942</td>\n",
+       "      <td>Shinkansen from Kyoto to Hiroshima</td>\n",
+       "      <td>Georgia invitation letter for visa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.999943</td>\n",
+       "      <td>Shinkansen from Kyoto to Hiroshima</td>\n",
+       "      <td>Door stopper for hotel room</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.999947</td>\n",
+       "      <td>Shinkansen from Kyoto to Hiroshima</td>\n",
+       "      <td>Schengen business visa - multiple entry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.999948</td>\n",
+       "      <td>Shinkansen from Kyoto to Hiroshima</td>\n",
+       "      <td>Schengen visa: appointment not available</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.999787</td>\n",
+       "      <td>Bus tour of Germany</td>\n",
+       "      <td>Visiting Moscow on Stopover</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.999791</td>\n",
+       "      <td>Bus tour of Germany</td>\n",
+       "      <td>US Visa for spouse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.999793</td>\n",
+       "      <td>Bus tour of Germany</td>\n",
+       "      <td>Direct Airside Transit Visa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.999798</td>\n",
+       "      <td>Bus tour of Germany</td>\n",
+       "      <td>Evisa for India cruise</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       dist                            question  \\\n",
+       "0  0.999880     Roundtrip ticket versus one way   \n",
+       "1  0.999883     Roundtrip ticket versus one way   \n",
+       "2  0.999932     Roundtrip ticket versus one way   \n",
+       "3  0.999954     Roundtrip ticket versus one way   \n",
+       "0  0.999942  Shinkansen from Kyoto to Hiroshima   \n",
+       "1  0.999943  Shinkansen from Kyoto to Hiroshima   \n",
+       "2  0.999947  Shinkansen from Kyoto to Hiroshima   \n",
+       "3  0.999948  Shinkansen from Kyoto to Hiroshima   \n",
+       "0  0.999787                 Bus tour of Germany   \n",
+       "1  0.999791                 Bus tour of Germany   \n",
+       "2  0.999793                 Bus tour of Germany   \n",
+       "3  0.999798                 Bus tour of Germany   \n",
+       "\n",
+       "                                            result  \n",
+       "0                  Health Insurance coverage in UK  \n",
+       "1      Cancelling apartment booking in Switzerland  \n",
+       "2  Transatlantic cruises allowing casual dressing?  \n",
+       "3                Bringing work goods across border  \n",
+       "0               Georgia invitation letter for visa  \n",
+       "1                      Door stopper for hotel room  \n",
+       "2          Schengen business visa - multiple entry  \n",
+       "3         Schengen visa: appointment not available  \n",
+       "0                      Visiting Moscow on Stopover  \n",
+       "1                               US Visa for spouse  \n",
+       "2                      Direct Airside Transit Visa  \n",
+       "3                           Evisa for India cruise  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lookup = EmbeddingWrapper(model=lstm_embedding)\n",
+    "evaluate_sample(lookup)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
